--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -729,14 +729,15 @@
                             <i class="fa fa-bullhorn"></i>
                         </div>
                         <div class="content">
-                            <h6>Easy Customization</h6>
+                            <h6>Выбор оборудования и соблюдение норм безопасности</h6>
                             <div class="subtitle">
                                 Lorem ipsum dolor sit amet,
                             </div>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit iusto veniam, animi nam
-                                explicabo est adipisci tempora nesciunt ab pariatur necessitatibus autem laudantium non
-                                sint facere.
+                                Особое внимание уделяется выбору качественных материалов и оборудования: кабелей соответствующего сечения, автоматических выключателей, 
+                                устройств защитного отключения (УЗО), распределительных щитов и заземления. Монтаж предполагает соблюдение строительных норм и стандартов, 
+                                аккуратную прокладку проводки, надёжные соединения и обязательное тестирование системы перед вводом в эксплуатацию. 
+                                Это снижает риск короткого замыкания, перегрева и пожара.
                             </p>
                         </div>
                     </div>
@@ -746,14 +747,15 @@
                             <i class="fa fa-cog"></i>
                         </div>
                         <div class="content">
-                            <h6>Miniaml Design</h6>
+                            <h6>Современные технологии и автоматизация</h6>
                             <div class="subtitle">
                                 Lorem ipsum dolor sit amet,
                             </div>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit iusto veniam, animi nam
-                                explicabo est adipisci tempora nesciunt ab pariatur necessitatibus autem laudantium non
-                                sint facere.
+                                Электрическое оснащение жилья также включает элементы автоматизации — системы «умный дом», энергосберегающее освещение, 
+                                датчики движения и программируемые контроллеры. Такие решения повышают комфорт, безопасность и энергоэффективность дома. 
+                                Грамотно выполненная электрификация обеспечивает стабильную работу всех устройств, экономию ресурсов и долгосрочную надёжность 
+                                всей системы электроснабжения.
                             </p>
                         </div>
                     </div>
