--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -714,7 +714,7 @@
                         <div class="content">
                             <h6>Проектирование и планирование электроснабжения</h6>
                             <div class="subtitle">
-                                Lorem ipsum dolor sit amet,
+                                проектирование электроснабжения
                             </div>
                             <p>
                                 Оснащение жилья электрикой — это комплексный процесс, который включает проектирование, подбор оборудования и грамотный монтаж всех электрических систем. 
@@ -731,7 +731,7 @@
                         <div class="content">
                             <h6>Выбор оборудования и соблюдение норм безопасности</h6>
                             <div class="subtitle">
-                                Lorem ipsum dolor sit amet,
+                                безопасность и оборудование
                             </div>
                             <p>
                                 Особое внимание уделяется выбору качественных материалов и оборудования: кабелей соответствующего сечения, автоматических выключателей, 
@@ -749,7 +749,7 @@
                         <div class="content">
                             <h6>Современные технологии и автоматизация</h6>
                             <div class="subtitle">
-                                Lorem ipsum dolor sit amet,
+                                автоматизация и комфорт
                             </div>
                             <p>
                                 Электрическое оснащение жилья также включает элементы автоматизации — системы «умный дом», энергосберегающее освещение, 
