--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -797,11 +797,10 @@
                                 <div class="tab-bg">
                                     <h2>01</h2>
                                     <h3>Это первый, самый ответственный, этап нашей технологии</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis quod
-                                        debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus
-                                        reprehenderit
-                                        dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit
-                                        magnam sapiente accusantium, repellat earum!</p>
+                                    <p>На этом этапе формируются требования к будущей системе электроснабжения. 
+                                        Определяются объёмы работ, мощность оборудования, особенности объекта и пожелания заказчика. 
+                                        Фиксируются сроки, бюджет и нормативные требования. 
+                                        Техническое задание служит основой для всех последующих этапов.</p>
 
                                     <div id="services-02-btn-01">
                                         <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch"
@@ -824,12 +823,11 @@
                             <div class="col-md-6">
                                 <div class="tab-bg">
                                     <h2>02</h2>
-                                    <h3>All Web Needs Optimization to rank </h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis quod
-                                        debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus
-                                        reprehenderit
-                                        dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit
-                                        magnam sapiente accusantium, repellat earum!</p>
+                                    <h3>Прототип </h3>
+                                    <p>Создаётся предварительная схема размещения электрических точек и оборудования. 
+                                        Определяются основные технические решения и принципы распределения нагрузки. 
+                                        Прототип позволяет визуализировать будущую систему и выявить возможные недочёты. 
+                                        При необходимости вносятся корректировки до начала детального проектирования.</p>
 
                                     <div id="services-02-btn-02">
                                         <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch"
