--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -850,14 +850,12 @@
                             <div class="col-md-6">
                                 <div class="tab-bg">
                                     <h2>03</h2>
-                                    <h3>Design Which Makes Wow</h3>
+                                    <h3>Согласование</h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis
-                                        quod
-                                        debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus
-                                        reprehenderit
-                                        dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit
-                                        magnam sapiente accusantium, repellat earum!
+                                        Проектные решения обсуждаются с заказчиком и, при необходимости, с надзорными органами. 
+                                        Уточняются детали размещения, мощности и применяемых материалов. 
+                                        Вносятся правки и утверждается финальная версия документации. 
+                                        После согласования проект допускается к реализации.
                                     </p>
 
                                     <div id="services-02-btn-03">
@@ -881,14 +879,12 @@
                             <div class="col-md-6">
                                 <div class="tab-bg">
                                     <h2>04</h2>
-                                    <h3>Development and Interactivity in Web</h3>
+                                    <h3>Проектирование</h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis
-                                        quod
-                                        debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus
-                                        reprehenderit
-                                        dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit
-                                        magnam sapiente accusantium, repellat earum!
+                                        Разрабатывается полный комплект рабочей документации: схемы, расчёты нагрузок, спецификации оборудования. 
+                                        Подбираются кабели, защитные устройства и распределительные щиты. 
+                                        Проект выполняется с учётом действующих норм и стандартов безопасности. 
+                                        Документация передаётся монтажной группе для реализации.
                                     </p>
 
                                     <div id="services-02-btn-04">
@@ -913,14 +909,12 @@
                             <div class="col-md-6">
                                 <div class="tab-bg">
                                     <h2>05</h2>
-                                    <h3>Testing in Web</h3>
+                                    <h3>Монтаж</h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis
-                                        quod
-                                        debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus
-                                        reprehenderit
-                                        dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit
-                                        magnam sapiente accusantium, repellat earum!
+                                        Выполняется прокладка кабелей и установка электротехнического оборудования согласно проекту. 
+                                        Производится подключение щита, автоматов, розеток и осветительных приборов. 
+                                        Проводятся пусконаладочные работы и проверка системы. 
+                                        После тестирования объект вводится в эксплуатацию.
                                     </p>
 
                                     <div id="services-02-btn-05">
