--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -823,7 +823,7 @@
                             <div class="col-md-6">
                                 <div class="tab-bg">
                                     <h2>02</h2>
-                                    <h3>Прототип </h3>
+                                    <h3>Выбор прототипа</h3>
                                     <p>Создаётся предварительная схема размещения электрических точек и оборудования. 
                                         Определяются основные технические решения и принципы распределения нагрузки. 
                                         Прототип позволяет визуализировать будущую систему и выявить возможные недочёты. 
