--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -909,7 +909,7 @@
                             <div class="col-md-6">
                                 <div class="tab-bg">
                                     <h2>05</h2>
-                                    <h3>Монтаж</h3>
+                                    <h3>Монтаж и пусконаладка</h3>
                                     <p>
                                         Выполняется прокладка кабелей и установка электротехнического оборудования согласно проекту. 
                                         Производится подключение щита, автоматов, розеток и осветительных приборов. 
