--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -850,7 +850,7 @@
                             <div class="col-md-6">
                                 <div class="tab-bg">
                                     <h2>03</h2>
-                                    <h3>Согласование</h3>
+                                    <h3>Согласование прототипа</h3>
                                     <p>
                                         Проектные решения обсуждаются с заказчиком и, при необходимости, с надзорными органами. 
                                         Уточняются детали размещения, мощности и применяемых материалов. 
