--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -801,7 +801,7 @@
                                         Определяются объёмы работ, мощность оборудования, особенности объекта и пожелания заказчика. 
                                         Фиксируются сроки, бюджет и нормативные требования. 
                                         Техническое задание служит основой для всех последующих этапов.</p>
-
+                                    <h6>Для более подробной информации:</h6>
                                     <div id="services-02-btn-01">
                                         <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch"
                                             role="button">Свяжитесь с нами</a>
@@ -828,7 +828,7 @@
                                         Определяются основные технические решения и принципы распределения нагрузки. 
                                         Прототип позволяет визуализировать будущую систему и выявить возможные недочёты. 
                                         При необходимости вносятся корректировки до начала детального проектирования.</p>
-
+                                    <h6>Для более подробной информации:</h6>
                                     <div id="services-02-btn-02">
                                         <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch"
                                             role="button">Свяжитесь с нами</a>
@@ -857,7 +857,7 @@
                                         Вносятся правки и утверждается финальная версия документации. 
                                         После согласования проект допускается к реализации.
                                     </p>
-
+                                    <h6>Для более подробной информации:</h6>
                                     <div id="services-02-btn-03">
                                         <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch"
                                             role="button">Свяжитесь с нами</a>
@@ -886,7 +886,7 @@
                                         Проект выполняется с учётом действующих норм и стандартов безопасности. 
                                         Документация передаётся монтажной группе для реализации.
                                     </p>
-
+                                    <h6>Для более подробной информации:</h6>
                                     <div id="services-02-btn-04">
                                         <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch"
                                             role="button">Свяжитесь с нами</a>
@@ -916,7 +916,7 @@
                                         Проводятся пусконаладочные работы и проверка системы. 
                                         После тестирования объект вводится в эксплуатацию.
                                     </p>
-
+                                    <h6>Для более подробной информации:</h6>
                                     <div id="services-02-btn-05">
                                         <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch"
                                             role="button">Свяжитесь с нами</a>
