--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -110,7 +110,7 @@
             <div class="row">
                 <div class="col-sm-6 col-md-6">
                     <div class="mobile-app-banner-content wow bounceInUp">
-                        <h1>Профессиональное<br>
+                        <h1>Современное<br>
                             оснащение жилья<br>
                             электрикой<br>
                             и сантехникой</h1>
