--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -1831,7 +1831,7 @@
 
     <footer class="text-center">
         <div class="container">
-            <a href="" class="pogo" text-align="center">Электрика&nbspСантехника</a>
+            <a href="" class="pogo">Электрика Сантехника</a>
             <div class="social">
 
                 <a href="https://t.me/leonid_alt_ru" target="_blank"><i class="fa fa-telegram wow bounceInUp"
