--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -1821,7 +1821,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d154486.2750393717!2d83.69344422941198!3d53.34670014022802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x42dda64703a89e0b%3A0x6b4453982e04e4c2!2z0JHQsN এইচডি0YDQtdC90L7QstC-LCDQkNCw0YDQvtCz0YDQsNCy0YHQutCw0Y8g0LrQsNC70LAsIDY1NjAwMA!5e0!3m2!1sru!2sru!4v1708340000000!5m2!1sru!2sru" 
                     width="600" 
                     height="450" 
-                    style="border:0;" 
+                    style="border: 0; margin-left: 0; padding-left:0;"
                     allowfullscreen="" 
                     loading="lazy" 
                     referrerpolicy="no-referrer-when-downgrade">
