--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -942,8 +942,8 @@
                 <div class="filtering text-center col-sm-12">
                     <div class="filter">
                         <span data-filter='*' class="active">Все проекты</span>
-                        <span data-filter='.phase1'>Однофазные схемы питание</span>
-                        <span data-filter='.phases3'>3х фазные схемы питания</span>
+                        <span data-filter='.phase1'>Однофазные схемы питания</span>
+                        <span data-filter='.phases3'>3х-фазные схемы питания</span>
                         <span data-filter='.uzo'>Устройства защитного отключения</span>
                         <span data-filter='.pribor'>Приборы оснастки питания</span>
                     </div>
