--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -59,6 +59,24 @@
     <!-- Wow jquery plugin -->
     <script src="./js/wow.min.js"></script>
 
+    <!-- Подключаем скрипт плавной прокрутки до якоря -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Это сам скрипт плавной прокрутки до якоря -->
+    <script>
+        $(document).ready(function(){
+            $("a[href*='#']").on("click", function(e){
+                var anchor = $(this);
+                $('html, body').stop().animate({
+                    scrollTop: $(anchor.attr('href')).offset().top
+                }, 777);
+                e.preventDefault();
+                return false;
+            });
+        });
+    </script>
+    <!-- // Это сам скрипт плавной прокрутки до якоря -->
+
 </head>
 
 
