--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -60,7 +60,7 @@
     <script src="./js/wow.min.js"></script>
 
     <!-- Подключаем скрипт плавной прокрутки до якоря -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 
     <!-- Это сам скрипт плавной прокрутки до якоря -->
     <script>
