--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -120,9 +120,11 @@
                             Инженерные решения для оборудования частных домов,<br> квартир и коттеджей.
                             <!-- <p> Инженерные решения для оборудования частных домов, квартир и коттеджей.</p> -->
                         </p>
-                        <div class="buttons">
+                        <div class="btn">
+                            <nav>
                             <a href="#services-el" class="btn btn-pink">Электрика</a>
                             <a href="#services-san" class="btn btn-blue">Сантехника</a>
+                            </nav>
                         </div>
                     </div>
                 </div>
