--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -122,8 +122,8 @@
                         </p>
                         <div class="btn">
                             <nav>
-                            <a href="#services-el" class="buttons btn-pink">Электрика</a>
-                            <a href="#services-san" class="buttons btn-blue">Сантехника</a>
+                            <a href="#services-el" class="btn btn-pink">Электрика</a>
+                            <a href="#services-san" class="btn btn-blue">Сантехника</a>
                             </nav>
                         </div>
                     </div>
